--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -10,12 +10,11 @@
        <h1>Project Name</h1> <!--issue with border, gap-->
     </div>
 
-    <div class = "toDoContainer">
+    <div id = "toDoContainer">
         <p1>To do list; Enter tasks below</p1>
-
-            <ul>
-
-            </ul>
+        <input type = "text" id="tasks" placeholder="add tasks here"
+        <button>Done</button>
+        
     </div>
 
    
