--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -41,7 +41,7 @@
                 <button id ="thirty">30</button>
             </div>
 
-            <div id="timer" class="timer">00:00</div>
+            <div id="timer" class="timertext">00:00</div>
 
             <div class = "bottomtimebottoms"> 
             <button id="start">Start</button>
