--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -56,6 +56,7 @@
 
                              
     <div class ="grid-item box3">
+        <textarea id="noteInput" rows="10" cols="50" placeholder="Type your notes here..."></textarea> <!--for writing notes-->
 
     </div>
 
