--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"> <!--for font library-->
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 
     <title>Study Buddy</title>
 
@@ -19,7 +21,7 @@
             <input type="text" class="button-style" id="taskInput" onkeydown="if(event.key === 'Enter'){ addTask(); }" placeholder="Enter your task" >
             <button type="button" class="button-style" onclick="addTask()">Add Task</button> 
             <button type = "button" class="button-style" onclick ="clearTasks()">Clear</button> 
-            <button type="button"  class="button-style" onclick="saveTasks()">Save Tasks</button> 
+            <button type="button" button id ="taskSave" class="button-style" onclick="saveData()">Save Tasks</button> 
 
             <button type = "button"> <label for="fileInput" class="button-style" >Load Tasks</label></button> <!--file input button-->
             <input type="file" id="fileInput" accept=".json" style="display: none;"> <!-- only accept json file-->
@@ -60,10 +62,11 @@
     </div>
 
     <div class =" grid-item box4">
-        <textarea id="noteInput" rows="10" cols="50" placeholder="Type your notes here..."></textarea> <!--for writing notes-->
+        <textarea id="notesList" rows="10" cols="50" placeholder="Type your notes here..."></textarea> <!--for writing notes-->
         
             <button class = "notesbuttons" id="importNotes">Import</button>
-            <button class = "notesbuttons" id ="saveNotes">Save</button>
+            <button class = "notesbuttons" id ="saveNotes" onclick = "saveNotes()">Save</button>
+            <ul id="notesList"></ul>
 
         
     </div>
