new save data function now works with "notes" too

--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -52,7 +52,6 @@
         </div>
 
         </div>
- 
 
     </div>
 
@@ -62,12 +61,10 @@
     </div>
 
     <div class =" grid-item box4">
-        <textarea id="notesList" rows="10" cols="50" placeholder="Type your notes here..."></textarea> <!--for writing notes-->
+        <textarea id="notesList" placeholder="Type your notes here..."></textarea> <!--for writing notes-->
         
             <button class = "notesbuttons" id="importNotes">Import</button>
-            <button class = "notesbuttons" id ="saveNotes" onclick = "saveNotes()">Save</button>
-            <ul id="notesList"></ul>
-
+            <button class = "notesbuttons" id ="saveNotes" onclick = "saveData()">Save</button>
         
     </div>
 </div>
